# Sillage

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
config/tests/: acausal.yaml  causal.yaml
output/: Wake_000.ipe  Wake_001.ipe  Wake_002.ipe  Wake_003.ipe  Wake_004.ipe  Wake_005.ipe  Wake_006.ipe  Wake_007.ipe  Wake_008.ipe  Wake_009.ipe  Wake_010.ipe  Wake_011.ipe  Wake_012.ipe  Wake_013.ipe  Wake_014.ipe  Wake_015.ipe  Wake_016.ipe  Wake_017.ipe  Wake_018.ipe  Wake_019.ipe  Wake_020.ipe  Wake_021.ipe  Wake_022.ipe  Wake_023.ipe  Wake_024.ipe  Wake_025.ipe  Wake_026.ipe  Wake_027.ipe  Wake_028.ipe  Wake_029.ipe  Wake_030.ipe  Wake_031.ipe  Wake_032.ipe  Wake_033.ipe  Wake_034.ipe  Wake_035.ipe  Wake_036.ipe  Wake_037.ipe  Wake_038.ipe  Wake_039.ipe  (+799 more)
scripts/: ipe_convert.bash  video.bash
src/: boat.hpp  main.cpp  scene.cpp  scene.hpp  sensor.hpp  sivia.cpp  sivia.h  thread_pool.hpp  utils.cpp  utils.hpp
test/: CMakeLists.txt
test/01-forward/: main.cpp
test/02-backward/: main.cpp
test/03-detection_space/: main.cpp
test/03-fb/: main.cpp
test/04-complex/: main.cpp
test/05-video/: main.cpp
test/06-presentation/: main.cpp
